--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "PWM control a RPi case mounted fan based on current CPU temperature",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jtcmedia/rpi-fan-ctrl.git"
+    "url": "https://github.com/jtcmedia/rpi-fan-ctrl.git"
   },
   "dependencies": {
     "rpio": "0.6.x"
@@ -13,7 +13,7 @@
     "readme": "node ./node_modules/.bin/node-readme"
   },
   "engine": "node >= 4.2.1",
-  "author": "jtcmedia <jason.cumiskey@gmail.com>",
+  "author": "jtcmedia <jtcmedia@users.noreply.github.com>",
   "bugs": {
     "url": "https://github.com/jtcmedia/rpi-fan-ctrl/issues"
   },
