--- a/package.json
+++ b/package.json
@@ -7,19 +7,13 @@
     "url": "https://github.com/jtcmedia/rpi-fan-ctrl.git"
   },
   "dependencies": {
-    "rpio": "0.6.x"
+    "pi-blaster.js": "0.1.x"
   },
-  "scripts": {
-    "readme": "node ./node_modules/.bin/node-readme"
-  },
-  "engine": "node >= 4.2.1",
+  "engine": "node >= 0.12.6",
   "author": "jtcmedia <jtcmedia@users.noreply.github.com>",
   "bugs": {
     "url": "https://github.com/jtcmedia/rpi-fan-ctrl/issues"
   },
   "homepage": "https://github.com/jtcmedia/rpi-fan-ctrl#readme",
-  "license": "MIT",
-  "devDependencies": {
-    "node-readme": "^0.1.9"
-  }
+  "license": "MIT"
 }
