- added infinite-loop to dependencies in package.json - created disp-temp-cpu-freq for testing - added test-running.sh to test fan script is running

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "https://github.com/jtcmedia/rpi-fan-ctrl.git"
   },
   "dependencies": {
-    "pi-blaster.js": "0.1.x"
+    "pi-blaster.js": "0.1.x",
+    "infinite-loop" : "0.2.x"
   },
   "engine": "node >= 0.12.6",
   "author": "jtcmedia <jtcmedia@users.noreply.github.com>",
